# rusty-rtos

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
.embedded/: runner.toml
src/: game.rs  lib.rs
src/graphics/: mod.rs
src/physics/: mod.rs
src/rtos/: aperiodic.rs  atomics.rs  handlers.rs  ipc.rs  mod.rs  periodic.rs  scheduler.rs  syscall.rs  threads.rs
