[package]
authors = [
	"Nikhil Iyer <iyer.h.n.nikhil@gmail.com>",
]
edition = "2018"
readme = "README.md"
name = "eel4745c"
version = "0.1.0"

[patch.crates-io]
cortex-m = { path = "../cortex-m/cortex-m" }
cortex-m-rt = { path = "../cortex-m/cortex-m-rt" }
tm4c123x-hal = { path = "../tm4c-hal/tm4c123x-hal" }

[profile.dev]
opt-level = 3
debug = true

[dependencies]
embedded-hal = "1.0.0"
eh0 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
opt300x = "1.0.0"
panic-semihosting = "0.6.0"
panic-halt = "1.0.0"
tm4c123x-hal = { version = "0.10.3", features = ["rt"] }
heapless = "0.9.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
cortex-m-semihosting = "0.5.0"
embedded-hal-bus = { version = "0.3.0", features = ["portable-atomic"] }
bmi160 = "1.1.0"
bme280 = "0.5.1"
nb = "1.1.0"
mipidsi = { version = "0.9.0", default-features = false }
embedded-graphics = "0.8.1"
pca9555 = "0.1.1"
rand = { version="0.9.2", default-features = false, features = ["small_rng"] }
micromath = "2.1.0"

